modelos y controladores de cartas, usuario y carpetas

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_storage: ^12.3.3
   cloud_firestore: ^5.4.4
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
