--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,3 +21,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - images/
+    - images/Carpeta-azul/
+    - images/Carpeta-roja/
+    - images/Carpeta-verde/
+  
