--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_storage: ^12.3.3
   cloud_firestore: ^5.4.4
   get: ^4.6.6
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
